fixed title alignments and added some glowing text

--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
   /* position: absolute;
   object-fit: contain; */
   max-width: 100%;
-  max-height: 80vh;
+  max-height: 75vh;
   position:absolute;
   top: 0;
   visibility: hidden;
@@ -45,7 +45,7 @@
   /* position: absolute;
   object-fit: contain; */
   max-width: 100%;
-  max-height: 80vh;
+  max-height: 75vh;
   position:absolute;
   top: 0;
   visibility: hidden;
@@ -68,7 +68,7 @@
   /* position: absolute;
   object-fit: contain; */
   max-width: 100%;
-  max-height: 80vh;
+  max-height: 75vh;
   position:absolute;
   top: 0;
   visibility: hidden;
@@ -92,7 +92,7 @@
   /* position: absolute;
   object-fit: contain; */
   max-width: 100%;
-  max-height: 80vh;
+  max-height: 75vh;
   visibility: hidden;
 
   /* object-fit:contain; */
@@ -116,7 +116,7 @@
   /* position: absolute;
   object-fit: contain; */
   max-width: 100%;
-  max-height: 80vh;
+  max-height: 75vh;
   visibility: hidden;
 
   /* object-fit:contain; */
@@ -140,7 +140,7 @@
   /* position: absolute;
   object-fit: contain; */
   max-width: 100%;
-  max-height: 80vh;
+  max-height: 75vh;
   /* object-fit:contain; */
   /* margin-left: auto;
   margin-right: auto; */
@@ -177,7 +177,7 @@
   position: relative;
   max-height: 90vh;
   max-width: 100%;
-  /* max-height: 80vh; */
+  /* max-height: 75vh; */
   /* margin-left: 0; */ */
   /* margin-right: 0;
   /* display: block; */
@@ -227,7 +227,7 @@ html, body {
 } */
 
 .twitch {
-  max-height: 80vh;
+  max-height: 75vh;
   max-width: 100%;
 }
 
@@ -354,9 +354,17 @@ p1 {
   color: #edf5ff;
   font-size:1.0vw;
   overflow: scroll;
-  height: 80vh;
-
+  height: 75vh;
 }
+
+#tool::-webkit-scrollbar {
+  display: none;
+}
+
+/* .example {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+} */
 
 .line {
   fill: none;
@@ -436,6 +444,25 @@ p1 {
   fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
+}
+
+.glow {
+  /* font-size: 80px; */
+  color: #edf5ff;
+  text-align: center;
+  -webkit-animation: glow 2s ease-in-out infinite alternate;
+  -moz-animation: glow 2s ease-in-out infinite alternate;
+  animation: glow 2s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #0043ce, 0 0 40px #0043ce, 0 0 50px #0043ce, 0 0 60px #0043ce, 0 0 70px #0043ce;
+  }
+
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #001d6c, 0 0 40px #001d6c, 0 0 50px #001d6c, 0 0 60px #001d6c, 0 0 70px #001d6c, 0 0 80px #001d6c;
+  }
 }
 
 /* future style end */
